# cpu_emulator

./: CMakeLists.txt
src/: base.cpp  base.h  cpu.cpp  cpu.h  instructions.cpp  instructions.h
tests/: instructions_tests.cpp  main.cpp
